--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,77 @@
-.App {
-  text-align: center;
+/* Header Styles */
+
+.header {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto auto;
+  justify-content: end;
+  gap: 30px;
+  margin: 30px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header-top {
+  border: 3px solid black;
+  grid-column: 1 / -1;
+  width: 500px;
+  padding: 20px;
+  display: grid;
+  gap: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header-top .name {
+  font-size: 3rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header-top .job-title {
+  font-size: 2rem;
+}
+
+.contact {
+  font-size: 1rem;
+  height: 1rem;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  place-self: center;
+  gap: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+img {
+  height: 1rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Main styles */
+
+.main {
+  border-width: 5px 0;
+  border-style: solid;
+}
+
+.main-component {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+}
+
+.main-title {
+  font-size: 2rem;
+  border-right: 1px solid black;
+  padding: 10px;
+  justify-self: end;
+}
+
+.content {
+  padding: 10px;
+}
+
+.org {
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.title {
+  font-style: italic;
+  margin-bottom: 10px;
+}
+
+.list-item {
+  display: grid;
+  grid-template-columns: 1fr auto auto;
 }
