--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   --medium: 1.5rem;
   --small: 1rem;
   --medium-space: 10px;
+  --large-space: 30px;
   min-width: 900px;
 }
 
@@ -13,8 +14,8 @@
   grid-template-columns: auto auto;
   grid-template-rows: auto auto;
   justify-content: end;
-  gap: 30px;
-  margin: 30px;
+  gap: var(--large-space);
+  margin: var(--large-space);
 }
 
 .header-top {
@@ -66,6 +67,12 @@ img {
   border-right: 1px solid black;
   padding: var(--medium-space);
   justify-self: end;
+}
+
+.profile-text {
+  display: grid;
+  grid-template-columns: 1fr auto;
+  gap: var(--large-space);
 }
 
 .content {
